# DEEPLEARNING-HelicoBacteria

./: .gitignore  Makefile  README.md  analyze_ae_fold_diagnostics.py  analyze_cv_metrics.py  analyze_patient_level_metrics.py  compare_patch_classifiers.py  compare_patch_classifiers_cv_folds.py  model.py  model_autoencoder.py  model_classifier.py  patient_autoencoder_fold.sbatch.sh  patient_cnn_fold.sbatch.sh  patient_level_pipeline.py  patient_plots.sbatch.sh  pyproject.toml  rsync.sh  rsync_pull.sh  rsync_push.sh  train.sbatch.sh  train_autoencoder.sbatch.sh  train_classifier.sbatch.sh
.github/workflows/: build-latex.yml
cv/autoencoder/: summary.json
cv/autoencoder/fold_1/: autoencoder_threshold.txt  metrics.json
cv/autoencoder/fold_2/: autoencoder_threshold.txt  metrics.json
cv/autoencoder/fold_3/: autoencoder_threshold.txt  metrics.json
cv/autoencoder/fold_4/: autoencoder_threshold.txt  metrics.json
cv/autoencoder/fold_5/: autoencoder_threshold.txt  metrics.json
cv/cnn/: summary.json
cv/cnn/fold_1/: metrics.json
cv/cnn/fold_2/: metrics.json
cv/plots/: ae_fold_diagnostics.json  ae_fold_diagnostics_report.txt  interpretation.txt  robust_stats_summary.json
latex/: main.tex  main.txt
latex/figures/: methodology.mmd
mermaid/: methodology.mmd
models/autoencoder/: autoencoder_threshold.txt
recons/: healthy.npy  sick.npy
scripts/: __init__.py  analyze_ae_fold_diagnostics.py  analyze_cv_metrics.py  analyze_patient_level_metrics.py  patient_level_pipeline.py
scripts/cluster/: rsync_pull.sh  rsync_push.sh
src/helico/: __init__.py  cv_utils.py
(+18 files in other folders)
